navebar-responsive achievement section and some alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
+
 .common-btn{
     background:  linear-gradient(to right, #2AF598, #01A1FA);
     border: none;
-    border-radius: 25px 0 !important;
-    color: #fff !important;
+    border-radius: 25px 0;
+    color: #fff;
 }
-.common-btn:active{
-  border: none!important;
+
+.common-btn:focus {
+  outline: none;
 }
-.common-btn:focus{
-  border: none!important;
+
+.common-btn:active {
+  transition: 0.3s all;
+  transform: translateY(3px);
+  border: 1px solid transparent;
+  opacity: 0.8;
 }
+
 .header-text{
   font-size: 60px;
   line-height: 0.8em;
@@ -25,7 +32,7 @@ li>a:hover{
 .effect:hover{
   background: #fff;
   border-radius: 70px 0px;
-  box-shadow: 5px 5px 10px lightgrey;
+  box-shadow: 0px 0px 15px lightgrey;
 }
 .card:hover{
   background: #fff;
